<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/decoration"
        android:src="@drawable/ic_challenge_complete_"
        app:layout_constraintBottom_toTopOf="@+id/goals_completion_subtitle_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goals_completion_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilory_regular"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/goal_successfully_reached"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_header_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/goals_completion_subtitle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilory_regular"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="center"
        android:text="@string/congratulation_you_have_achieved_your_goal_nyou_great_people"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_body_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/level_reached_background_circular_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/successfully_tick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>